- add route /api/exchange-rates and a dummy test for it - temporarily mark the /api/setup-check test as skipped. @todo fix it

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,6 +4,10 @@
 #  methods:  GET
 #
 
+exchange-rates:
+    path: /api/exchange-rates
+    controller: App\Controller\ExchangeRatesController::getList
+
 setupcheck:
     path: /api/setup-check
     controller: App\Controller\DefaultController::setupCheck
