--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,9 +4,12 @@
 #  methods:  GET
 #
 
+
 exchange-rates:
-    path: /api/exchange-rates
+    path: /api/exchange-rates/{when?}
     controller: App\Controller\ExchangeRatesController::getList
+    requirements:
+        when: "^([0-9]{4}-[0-9]{2}-[0-9]{2}$)*"
 
 setupcheck:
     path: /api/setup-check
